--- a/app/views/partners/dashboard/index.html.erb
+++ b/app/views/partners/dashboard/index.html.erb
@@ -14,195 +14,7 @@
       margin: 0;
   }
 </style>
-<div class="row">
-    
-  <h3 style="padding-left: 15px;"><%= @admintag.tag %>  <%= t('partner.dashboard.kol_incomes') %></h3>
-  <br />
-  <div class="col-sm-12">
-    <ul id="kol-summary" class="nav nav-tabs nav-justified" role="tablist">
-        <li role="presentation" class="active">
-          <a href="#kol_1d" aria-controls="kol_1d" data-toggle="tab" role="tab">
-            24H
-          </a>
-        </li>
-        <li role="presentation" class="">
-          <a href="#kol_1d" aria-controls="kol_7d" data-toggle="tab" role="tab">
-            7天
-          </a>
-        </li>
-        <li role="presentation" class="">
-          <a href="#kol_1d" aria-controls="kol_30d" data-toggle="tab">
-            30天
-          </a>
-        </li>
-        <li role="presentation" class="">
-          <a href="#kol_1d" aria-controls="kol_all" data-toggle="tab">
-            汇总
-          </a>
-        </li>
-        
-
-    </ul>
-    <div class="tab-content">
-      <div role="tabpanel" class="tab-pane fade in active" id="kol_1d">
-        <div class="row" style="margin: 0;padding: 10px 0;">
-          <!-- 邀请注册人数 -->
-          <div class="col-sm-4" style="">
-            <ul class="list-group">
-              <li class="list-group-item text-center">
-                <h3 style="margin-top: 5px; margin-bottom: 20px;">邀请注册人数</h3>
-                <div class="text-center">
-                  <%= image_tag("partners/user.png", alt: "", id: "reg_top1_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  <br />
-                </div>
-                <div class="winner-margin text-center">
-                    <h4 class="winner-name" id="reg_top1_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h4>
-                    <h3 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="reg_top1_price">0</span>
-                    </h3>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="row" style="margin: 0;">
-                  <div class="col-sm-4">
-                    <%= image_tag("partners/user.png", alt: "", id: "reg_top2_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  </div>
-                  <div class="col-sm-8">
-                    <h5 class="winner-name" id="reg_top2_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h5>
-                    <h6 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="reg_top2_price">0</span>
-                    </h6>
-                  </div>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="row" style="margin: 0;">
-                  <div class="col-sm-4">
-                    <%= image_tag("partners/user.png", alt: "", id: "reg_top3_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  </div>
-                  <div class="col-sm-8">
-                    <h5 class="winner-name" id="reg_top3_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h5>
-                    <h6 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="reg_top3_price">0</span>
-                    </h6>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <!-- 总文章点击数 -->
-          <div class="col-sm-4" style="">
-            <ul class="list-group">
-              <li class="list-group-item text-center">
-                <h3 style="margin-top: 5px; margin-bottom: 20px;">总文章点击数</h3>
-                <div class="text-center">
-                  <%= image_tag("partners/user.png", alt: "", id: "cpc_top1_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  <br />
-                </div>
-                <div class="winner-margin text-center">
-                    <h4 class="winner-name" id="cpc_top1_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h4>
-                    <h3 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="cpc_top1_price">0</span>
-                    </h3>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="row" style="margin: 0;">
-                  <div class="col-sm-4">
-                    <%= image_tag("partners/user.png", alt: "", id: "cpc_top2_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  </div>
-                  <div class="col-sm-8">
-                    <h5 class="winner-name" id="cpc_top2_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h5>
-                    <h6 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="cpc_top2_price">0</span>
-                    </h6>
-                  </div>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="row" style="margin: 0;">
-                  <div class="col-sm-4">
-                    <%= image_tag("partners/user.png", alt: "", id: "cpc_top3_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  </div>
-                  <div class="col-sm-8">
-                    <h5 class="winner-name" id="cpc_top3_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h5>
-                    <h6 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="cpc_top3_price">0</span>
-                    </h6>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <!-- 收益金额 -->
-          <div class="col-sm-4" style="">
-            <ul class="list-group">
-              <li class="list-group-item text-center">
-                <h3 style="margin-top: 5px; margin-bottom: 20px;">收益金额</h3>
-                <div class="text-center">
-                  <%= image_tag("partners/user.png", alt: "", id: "inc_top1_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  <br />
-                </div>
-                <div class="winner-margin text-center">
-                    <h4 class="winner-name" id="inc_top1_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h4>
-                    <h3 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="inc_top1_price">0</span>
-                    </h3>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="row" style="margin: 0;">
-                  <div class="col-sm-4">
-                    <%= image_tag("partners/user.png", alt: "", id: "inc_top2_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  </div>
-                  <div class="col-sm-8">
-                    <h5 class="winner-name" id="inc_top2_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h5>
-                    <h6 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="inc_top2_price">0</span>
-                    </h6>
-                  </div>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="row" style="margin: 0;">
-                  <div class="col-sm-4">
-                    <%= image_tag("partners/user.png", alt: "", id: "inc_top3_avatar", class: "img-circle img-responsive profile-img-max") %>
-                  </div>
-                  <div class="col-sm-8">
-                    <h5 class="winner-name" id="inc_top3_name">
-                      <%= t('partner.dashboard.error.msg') %>
-                    </h5>
-                    <h6 class="">
-                        <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="inc_top3_price">0</span>
-                    </h6>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-        
-    </div>
-  </div>
-  
-</div>
+<%= render partial: "income_data" %>
 <div class="row">
   <h3 style="padding-left: 15px;"><%= @admintag.tag %> <%= t('partner.dashboard.data_statistics') %></h3>
   <br />
