--- a/app/views/partners/kols/_list.html.erb
+++ b/app/views/partners/kols/_list.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= kol.name %></td>
         <td><%= kol.mobile_number %></td>
-        <td><%= kol.created_at.to_s(:db) %></td>        
+        <td><%= kol.created_at %></td>        
         <td align="center"><%= link_to kol.parent.mobile_number, children_partners_kol_path(kol.parent.id), target: "_blank"  if kol.parent.present? %></td>
         <td align="center"><%= kol.campaign_invites.count %></td>
         <td align="center"><%= kol.campaign_shows.valid.count %></td>
