--- a/app/views/partners/kols/children.html.erb
+++ b/app/views/partners/kols/children.html.erb
@@ -20,13 +20,13 @@
         <div class="col-md-4">
           <div class="form-group">
             <label>手机号</label>
-            <%= f.search_field :mobile_number_cont, class: "form-control", placeholder: "品牌主手机" %>
+            <%= f.search_field :mobile_number_cont, class: "form-control", placeholder: "手机" %>
           </div>
         </div>
         <div class="col-md-4">
           <div class="form-group">
             <label>昵称</label>
-            <%= f.search_field :name_cont, class: "form-control", placeholder: "品牌主昵称" %>
+            <%= f.search_field :name_cont, class: "form-control", placeholder: "昵称" %>
           </div>
         </div>
         <div class="col-md-8">
