refs: add kols_red_money function to ElasticArticlesController

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -424,6 +424,9 @@
               <%= link_to 'KOL “发现” 数据', kols_marketing_dashboard_elastic_articles_path %>
             </li>
             <li>
+              <%= link_to 'KOL “红包” 数据', kols_red_money_marketing_dashboard_elastic_articles_path %>
+            </li>
+            <li>
               <%= link_to '内容数据', marketing_dashboard_elastic_articles_path %>
             </li>
           </ul>
