--- a/app/views/marketing_dashboard/withdraws/index.html.erb
+++ b/app/views/marketing_dashboard/withdraws/index.html.erb
@@ -114,6 +114,12 @@
             <%= f.select :status_eq, Withdraw::STATUS , { include_blank: true }, class: "form-control" %>
           </div>
         </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <label>Admintag</label>
+            <%= f.select :kol_admintags_tag_eq, Admintag.pluck(:tag).uniq, { include_blank: true }, class: 'form-control' %>
+          </div>
+        </div>
         <div class="col-md-offset-9 col-md-3">
           <label>&nbsp;</label>
           <div>
