--- a/app/assets/stylesheets/lib/sb-admin-2.css
+++ b/app/assets/stylesheets/lib/sb-admin-2.css
@@ -303,6 +303,10 @@ table.dataTable thead .sorting:after {
     font-size: 40px;
 }
 
+.huge-s {
+    font-size: 30px;
+}
+
 .panel-green {
     border-color: #5cb85c;
 }
