--- a/app/views/marketing_dashboard/elastic_articles/_statistics.html.erb
+++ b/app/views/marketing_dashboard/elastic_articles/_statistics.html.erb
@@ -3,9 +3,10 @@
     <div class="panel panel-success">
       <div class="panel-heading text-right">
         <div id="tab_stay_times" data-time="<%= $redis.get('elastic_article_show_time') %>">
-          <span class="hour-show huge"></span>时
-          <span class="minute-show huge"></span>分
-          <span class="second-show huge"></span>秒
+          <!-- <span class="day-show huge-s"></span>天 -->
+          <span class="hour-show huge-s"></span>时
+          <span class="minute-show huge-s"></span>分
+          <span class="second-show huge-s"></span>秒
         </div>
         <div>发现Tab停留时长</div>
       </div>
@@ -39,13 +40,15 @@
     function countDownTimer(countObj, intDiff) {
       var day = 0,
           hour = 0,
+          hour_s = 0,
           minute = 0,
           second = 0;//时间默认值
       if(intDiff > 0){
         day = Math.floor(intDiff / (60 * 60 * 24));
-        hour = Math.floor(intDiff / (60 * 60)) - (day * 24);
-        minute = Math.floor(intDiff / 60) - (day * 24 * 60) - (hour * 60);
-        second = Math.floor(intDiff) - (day * 24 * 60 * 60) - (hour * 60 * 60) - (minute * 60);
+        hour = Math.floor(intDiff / (60 * 60));
+        hour_s = Math.floor(intDiff / (60 * 60)) - (day * 24);
+        minute = Math.floor(intDiff / 60) - (day * 24 * 60) - (hour_s * 60);
+        second = Math.floor(intDiff) - (day * 24 * 60 * 60) - (hour_s * 60 * 60) - (minute * 60);
       }
       if (minute <= 9) minute = '0' + minute;
       if (second <= 9) second = '0' + second;
