--- a/app/views/marketing_dashboard/elastic_articles/_statistics.html.erb
+++ b/app/views/marketing_dashboard/elastic_articles/_statistics.html.erb
@@ -3,10 +3,10 @@
     <div class="panel panel-success">
       <div class="panel-heading text-right">
         <div id="tab_stay_times" data-time="<%= $redis.get('elastic_article_show_time') %>">
-          <!-- <span class="day-show huge-s"></span>天 -->
-          <span class="hour-show huge-s"></span>时
-          <span class="minute-show huge-s"></span>分
-          <span class="second-show huge-s"></span>秒
+          <!-- <span class="day-show huge"></span>天 -->
+          <span class="hour-show huge"></span>时
+          <span class="minute-show huge"></span>分
+          <span class="second-show huge"></span>秒
         </div>
         <div>发现Tab停留时长</div>
       </div>
