--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -411,6 +411,9 @@
               <%= link_to "邀请码开关",  invite_switch_marketing_dashboard_utilities_redis_extends_path %>
             </li>
             <li>
+              <%= link_to "马夹包开关",  vest_bag_switch_marketing_dashboard_utilities_redis_extends_path %>
+            </li>
+            <li>
               <%= link_to "第三方价格配置", marketing_dashboard_utilities_admintag_strategies_path %>
             </li>
           </ul>
