--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -431,6 +431,18 @@
             </li>
           </ul>
         </li>
+
+        <li>
+          <a href="#">e_wallet 管理<span class="fa arrow"></span></a>
+          <ul class="nav nav-second-level">
+            <li>
+              <%= link_to '品牌主策落管理', marketing_dashboard_e_wallets_promotions_path %>
+            </li>
+            <li>
+              <%= link_to 'KOL 策落管理', marketing_dashboard_e_wallets_promotions_path %>
+            </li>
+          </ul>
+        </li>
         <li>
             <%= link_to '系统活动、公告', marketing_dashboard_announcements_path %>
         </li>
