--- a/app/views/marketing_dashboard/e_wallets/promotions/_form.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/promotions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@promotion, url: marketing_dashboard_e_wallets_promotions_path, html: { class: "form-horizontal"}) do |f| %>
+<%= form_for(@promotion, url: url, html: { class: "form-horizontal"}) do |f| %>
 
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-3 control-label">标题</label>
