--- a/app/views/marketing_dashboard/e_wallets/promotions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/promotions/index.html.erb
@@ -3,7 +3,45 @@
   <%= link_to "创建品牌主策略", new_marketing_dashboard_e_wallets_promotion_path, class: "btn btn-primary pull-right" %>
 </h3>
 
-<h5><%= devise_error_messages! %></h5>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    搜索过滤
+  </div>
+  <div id="searchPanel" class="panel-body">
+    <%= search_form_for @q, url: request.path, class: "form" do |f| %>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label>策略 ID</label>
+            <%= f.search_field :id_eq, class: "form-control", placeholder: "策略 ID" %>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label>策略标题</label>
+            <%= f.search_field :title_cont, class: "form-control", placeholder: "策略标题" %>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label>策略方式</label>
+            <%= f.select :promotion_way_cont, options_for_select([['回扣', 'rebate'],['放大', 'enlarge']]),{ include_blank: true }, class: "form-control", placeholder: "策略方式" %>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <label>&nbsp;</label>
+          <div>
+            <%= f.submit "搜索", class: "btn btn-primary" %>
+            <%= link_to "清除全部", request.path, class: "btn btn-default" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
 
 <table class='table table-bordered'>
@@ -30,10 +68,11 @@
         <td><%= promotion.min_amount %>~<%= promotion.max_amount %></td>
         <td><%= promotion.start_at.strftime("%Y-%m-%d %H:%M") rescue "未知" %></td>
         <td><%= promotion.end_at.strftime("%Y-%m-%d %H:%M") rescue "未知" %></td>
-        <td><%= promotion.promotion_way %></td>
+        <td><%= promotion.get_promotion_way %></td>
         <td><%= promotion.extra_percentage %>%</td>
         <td>
-          <%= link_to "编辑", edit_marketing_dashboard_e_wallets_promotion_path(promotion) %>
+          <%= link_to "编辑", edit_marketing_dashboard_e_wallets_promotion_path(promotion) %> |
+          <%= link_to "删除", marketing_dashboard_e_wallets_promotion_path(promotion), method: :delete, action: "destroy", data: { confirm: '确定要删除吗?' } %>
         </td>
       </tr>
     <% end %>
