refs: text mofigy

--- a/app/views/marketing_dashboard/e_wallets/promotions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/promotions/index.html.erb
@@ -47,13 +47,13 @@
 <table class='table table-bordered'>
   <thead>
     <tr>
-      <th>策略ID</th>
-      <th>策略标题</th>
-      <th>策略区间（最低～最高）</th>
-      <th>策略开始时间</th>
-      <th>策略结束时间</th>
-      <th>策略方式</th>
-      <th>策略奖励</th>
+      <th>ID</th>
+      <th>标题</th>
+      <th>区间（最低～最高）</th>
+      <th>开始时间</th>
+      <th>结束时间</th>
+      <th>方式</th>
+      <th>奖励</th>
       <th>操作</th>
     </tr>
   </thead>
