--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -436,10 +436,10 @@
           <a href="#">e_wallet 管理<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
-              <%= link_to '品牌主策落管理', marketing_dashboard_e_wallets_promotions_path %>
+              <%= link_to '品牌策略管理', marketing_dashboard_e_wallets_promotions_path %>
             </li>
             <li>
-              <%= link_to 'KOL 策落管理', marketing_dashboard_e_wallets_promotions_path %>
+              <%= link_to 'KOL策略管理', marketing_dashboard_e_wallets_kol_promotions_path %>
             </li>
           </ul>
         </li>
