--- a/app/views/marketing_dashboard/e_wallets/promotions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/promotions/index.html.erb
@@ -31,6 +31,20 @@
           </div>
         </div>
 
+        <div class="col-md-8">
+          <div class="form-group">
+            <label>活动开始时间</label>
+            <div class="row">
+              <div class="col-md-6">
+                <%= f.search_field :start_at_lgt, class: "form-control datetime", placeholder: "开始时间" %>
+              </div>
+              <div class="col-md-6">
+                <%= f.search_field :end_at_llt, class: "form-control datetime", placeholder: "结束时间" %>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-md-3">
           <label>&nbsp;</label>
           <div>
